<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.continueToBuy">
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">
        <include layout="@layout/appbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:orientation="vertical">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/phonenum"

        android:layout_gravity="right"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="@drawable/edittextback"
        android:hint="@string/phonenum"
        android:gravity="center"/>
    <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/black"
          android:text="@string/SubscriptionCode"
          android:layout_gravity="right"
          android:layout_marginTop="@dimen/_15sdp"
          android:layout_marginBottom="@dimen/_5sdp"
          android:textSize="@dimen/_14ssp"
          android:textStyle="bold"/>
    <EditText
          android:layout_width="match_parent"
          android:layout_height="@dimen/_30sdp"
          android:layout_marginLeft="@dimen/_10sdp"
          android:background="@drawable/edittextback"
          android:hint="@string/subscriptionnum"
          android:gravity="center"/>
    <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/black"
          android:text="@string/deleviryaddress"
          android:layout_gravity="right"
          android:layout_marginBottom="@dimen/_10sdp"
          android:layout_marginTop="@dimen/_30sdp"
          android:textSize="@dimen/_14ssp"
          android:textStyle="bold"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shippingAddressList">
            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/addnewAddress"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/appBack"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/phonenum"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:gravity="top"
            android:layout_marginRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_45sdp"
            android:background="@drawable/edittextback"
            android:hint="@string/notes"
            />
    </LinearLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/green"
        android:layout_alignParentBottom="true"
        android:id="@+id/continuerequest"
        android:text="@string/confirmrequest"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"/>
</RelativeLayout>