<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="@dimen/_40sdp"
     android:gravity="center"
     android:text="@string/productDetails"
     android:textColor="@android:color/black"
     android:textSize="@dimen/_13ssp"
     android:background="@drawable/ptoductdetailsback"
     android:textStyle="bold"
     />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_144sdp"
    android:weightSum="1"
    android:gravity="right"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="37 ريال"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/red"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="5 ريال"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/red"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="2 ريال"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/red"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="44 ريال"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/red"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight=".5"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:background="@color/appBack"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/product"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/delivaryprice"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/appmoney"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/summ"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"/>
    </LinearLayout>
</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/close"
        android:background="@color/appBack"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:text="@string/close"/>
</LinearLayout>