<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.chooseMarket">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/_20ssp"
    android:textColor="@android:color/black"
    android:gravity="center"
    android:layout_marginTop="@dimen/_10sdp"
    android:text="@string/determindMarket"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="right"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:weightSum="1"
        android:id="@+id/city"
        android:background="@drawable/edittextback"
        android:paddingRight="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_expand_more_black_24dp"/>
        <TextView
            android:layout_weight=".8"
            android:layout_width="0dp"
            android:id="@+id/cityname"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:layout_gravity="center"
            android:text="@string/city"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="right"
        android:id="@+id/neightboor"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:weightSum="1"
        android:background="@drawable/edittextback"
        android:paddingRight="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_expand_more_black_24dp"/>
        <TextView
            android:layout_weight=".8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:id="@+id/districname"
            android:layout_gravity="center"
            android:text="@string/Neighborhood"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="right"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:weightSum="1"
        android:id="@+id/store"
        android:background="@drawable/edittextback"
        android:paddingRight="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_expand_more_black_24dp"/>
        <TextView
            android:layout_weight=".8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:layout_gravity="center"
            android:text="@string/store"/>

    </LinearLayout>
    <Button
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/next"
        android:background="@drawable/verfiyback"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        android:layout_gravity="center"/>
</LinearLayout>