<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
android:orientation="vertical"
    android:paddingRight="@dimen/_15sdp"
    android:layout_height="match_parent"
    tools:context=".view.verfication">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/verfiyFromPhone"
        android:textSize="@dimen/_15ssp"
        android:textColor="@android:color/black"
        android:layout_gravity="right"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/phonenum"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="@drawable/edittextback"
        android:hint="@string/phonenum"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/verfiyCode"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="@drawable/edittextback"
        android:hint="@string/verfiyCode"
        android:gravity="center"/>
    <Button
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/verfiyback"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/verfiy"
        android:id="@+id/verfiy"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13ssp"
        android:layout_gravity="center"/>

    <ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_switcher"
        android:layout_width="@dimen/_220sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/_30sdp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/timeback"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="ثانيه"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/_5sdp"
                android:id="@+id/time"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:text="20"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendagain"
                android:textSize="@dimen/_12ssp"
            android:text="اعادة ارسال بعد"/>


        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="اعاده ارسال رمز التحقق"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:id="@+id/sendagainn"
            android:background="@drawable/switcherback"/>
    </ViewSwitcher>
    <Button
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/backdrawble"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/back"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_13ssp"
        android:layout_gravity="center"/>
</LinearLayout>